--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+	"strict": true,
+	"strictNullChecks": false,
+	"noImplicitAny": false, 
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
