--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
+    "clsx": "^1.0.4",
     "firebase": "^6.2.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
