--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.0",
     "typescript": "3.5.2"
   },
   "scripts": {
