--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+	  "esnext",
+	  "es6"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -12,8 +13,7 @@
     "allowSyntheticDefaultImports": true,
 	"strict": true,
 	"strictNullChecks": false,
-	"noImplicitAny": false, 
-    "forceConsistentCasingInFileNames": true,
+	"noImplicitAny": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
