--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,22 +4,23 @@
     "lib": [
       "dom",
       "dom.iterable",
-	  "esnext",
-	  "es6"
+      "esnext",
+      "es6"
     ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-	"strict": true,
-	"strictNullChecks": false,
-	"noImplicitAny": false,
+    "strict": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "src"
